# snack

./: .gitignore  .travis.yml  A.hs  B.hs  CHANGELOG.md  README.md  default.nix  shell.nix  tests.nix
nix/: default.nix  fetch.nix  overlay.nix  packages.nix  sources.json  update  versions.json
nix/nixpkgs/: default.nix  nixpkgs-src.json
script/: install  snack-fmt  test  update
snack/: default.nix
snack-lib/: Imports.hs  YamlToJson.hs  build.nix  default.nix  files.nix  ghci.nix  hpack.nix  lib.nix  module-spec.nix  modules.nix  package-spec.nix  wrapper.nix
tests/any-paths/: package.nix  package.yaml  test
tests/cpp/: Main.hs
tests/cpp-2/: Main.hs  package.nix  test
tests/dependencies/: snack.nix
tests/extended-config/: package.nix  package.yaml  snack.nix  test
tests/extended-config/nix/extra-hs/: Something.hs  something-that-doesnt-exist.cabal
tests/extensions/: Main.hs  package.yaml  snack.nix  test
tests/flat/: README.md  snack.nix
tests/ghc-options/: package.nix  package.yaml  test
tests/ghci-options/: package.nix  package.yaml  test
tests/hpack/: test
tests/library-2/: test
tests/library-3/: golden.jq  package.nix  test
tests/magichash/: Main.hs  package.yaml
tests/main-is-different/: Spec.hs  golden  package.nix  test
tests/nested/: README.md  package.yaml  snack.nix  test
tests/packages-2/: Main.hs  package.yaml  test
tests/performance/: default.nix  package.nix  test
tests/readme/: package-defaults.dhall  package-import.dhall  package.dhall  test
tests/run-args/: Main.hs  golden  package.nix  test
(+58 files in other folders)
